@@ -79,6 +79,7 @@ version 1.4.1
 7970							: diff-doc.js
 7972							: The log dialog used wrong revision numbers when calling "Show differences" on multiple selected revisions.
 7980							: Fetch status with ignored files
+7990							: "." instead of empty string in CSVNStatusListCtrl
 
 version 1.4.0
 7198							: Remove Win64 property to work with latest WiX
